--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -13,6 +13,20 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="2dp"
         android:gravity="right"
-        android:textSize="15sp" >
+        android:textSize="15sp" 
+        android:visibility="gone">
     </TextView>
+    
+    <ImageView 
+        android:id="@+id/messageImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="2dp"
+        android:gravity="right"
+        android:visibility="gone"
+        android:adjustViewBounds="true"
+        />
 </LinearLayout>
