--- a/res/layout/message_list_item_us.xml
+++ b/res/layout/message_list_item_us.xml
@@ -31,6 +31,22 @@
         android:layout_marginRight="50dp"
         android:layout_marginTop="2dp"
         android:gravity="left"
+        android:visibility="gone"
         android:textSize="15sp" />
+    
+    
+    <ImageView
+    android:id="@+id/messageImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="2dp"
+        android:gravity="left"
+        android:visibility="visible"
+        android:adjustViewBounds="true"
+         />
+    
 
 </LinearLayout>
