--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -41,6 +41,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="-10sp"
+        android:layout_marginRight="-10sp"
         android:background="@drawable/empty_blue_circle"
         android:text="send" />
 
