--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -2,31 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:gravity="right"
+    android:gravity="left"
     android:orientation="horizontal" >
+
+    <View
+        android:layout_width="3dp"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="50sp"
+        android:layout_marginRight="2dp"
+        android:background="@android:color/darker_gray"
+        android:visibility="visible" >
+    </View>
 
     <TextView
         android:id="@+id/messageText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginRight="2dp"
         android:layout_marginTop="2dp"
         android:textSize="15sp"
-        android:visibility="gone" 
-        android:gravity="right">
+        android:visibility="gone" >
     </TextView>
 
     <ImageView
         android:id="@+id/messageImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginBottom="2dp"        
+        android:layout_marginRight="2dp"
         android:layout_marginTop="2dp"
-        android:adjustViewBounds="true"
+        android:adjustViewBounds="true"        
         android:visibility="gone" />
 
 </LinearLayout>
