--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -29,7 +29,7 @@
     <ImageView
         android:id="@+id/messageImage"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="240dp"
         android:layout_marginBottom="2dp"        
         android:layout_marginRight="2dp"
         android:layout_marginTop="2dp"
