--- a/res/layout/message_list_item_us.xml
+++ b/res/layout/message_list_item_us.xml
@@ -36,7 +36,7 @@
     <ImageView
         android:id="@+id/messageImage"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="240dp"
         android:layout_marginBottom="2dp"        
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2sp"
