--- a/res/layout/activity_chat.xml
+++ b/res/layout/activity_chat.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"    
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
@@ -10,14 +10,14 @@
         android:id="@+id/indicator"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="2dp"
         android:background="@color/abs__background_holo_dark"
+        android:textSize="20sp"
         app:footerIndicatorStyle="none"
         app:footerLineHeight="0dp"
+        app:footerPadding="8dp"
+        app:topPadding="0dp"
         app:selectedBold="true"
-        app:selectedColor="#FFCC0000"
-        android:textSize="20sp"
-        android:gravity="top" />
+        app:selectedColor="#FF99CC00" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
