--- a/res/layout/main_friend_item.xml
+++ b/res/layout/main_friend_item.xml
@@ -3,8 +3,7 @@
     android:id="@+id/friendItemLayout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:background="@android:color/background_light" >
+    android:orientation="horizontal">
 
     <LinearLayout
         android:id="@+id/statusLayout"
