--- a/res/layout/activity_image_view.xml
+++ b/res/layout/activity_image_view.xml
@@ -4,10 +4,11 @@
     android:layout_height="match_parent"
     tools:context=".ImageViewActivity" >
 
-    <ImageView
+    <it.sephiroth.android.library.imagezoom.ImageViewTouch
         android:id="@+id/imageViewer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </ImageView>
+        android:layout_height="match_parent" 
+        android:background="@color/abs__background_holo_dark"        
+    />
 
 </LinearLayout>
