--- a/res/menu/activity_chat.xml
+++ b/res/menu/activity_chat.xml
@@ -5,23 +5,27 @@
         android:icon="@drawable/ic_menu_gallery"
         android:orderInCategory="100"
         android:showAsAction="ifRoom|withText"
-        android:title="send image"/>
+        android:title="select image"/>
+<!--     <item -->
+<!--         android:id="@+id/menu_send_image_menu" -->
+<!--         android:orderInCategory="100" -->
+<!--         android:showAsAction="never" -->
+<!--         android:title="select image"/> -->
+<!--     <item -->
+<!--         android:id="@+id/menu_capture_image_menu" -->
+<!--         android:orderInCategory="100" -->
+<!--         android:showAsAction="never" -->
+<!--         android:title="capture image"/> -->
     <item
-        android:id="@+id/menu_send_image_menu"
+        android:id="@+id/menu_capture_image_bar"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="send image"/>
-    <!-- <item -->
-    <!-- android:id="@+id/menu_capture_image_menu" -->
-    <!-- android:orderInCategory="100" -->
-    <!-- android:showAsAction="never" -->
-    <!-- android:title="capture image"/> -->
-
-    <item
-        android:id="@+id/menu_close_menu"               
-        android:orderInCategory="200"
-        android:showAsAction="never"
-        android:title="close tab"/>
+        android:showAsAction="ifRoom|withText"
+        android:title="capture image"/>
+<!--     <item -->
+<!--         android:id="@+id/menu_close_menu" -->
+<!--         android:orderInCategory="200" -->
+<!--         android:showAsAction="never" -->
+<!--         android:title="close tab"/> -->
     <item
         android:id="@+id/menu_close_bar"
         android:icon="@drawable/ic_menu_end_conversation"
