--- a/res/menu/activity_chat.xml
+++ b/res/menu/activity_chat.xml
@@ -33,5 +33,12 @@
         android:orderInCategory="200"
         android:showAsAction="ifRoom|withText"
         android:title="close tab"/>
+    
+    <item
+        android:id="@+id/menu_settings"
+        android:icon="@drawable/ic_menu_preferences"
+        android:orderInCategory="200"
+        android:showAsAction="ifRoom|withText"
+        android:title="settings"/>
 
 </menu>
