--- a/res/menu/activity_friend.xml
+++ b/res/menu/activity_friend.xml
@@ -1,17 +1,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-        <item
+    <item
         android:id="@+id/menu_debug_clear"
         android:orderInCategory="300"
         android:showAsAction="never"
         android:title="debug: clear local cache"/>
-        
-        
-        <item
+    <item
         android:id="@+id/menu_logout"
         android:orderInCategory="400"
         android:showAsAction="never"
         android:title="logout"/>
-    
+    <item
+        android:id="@+id/menu_settings"
+        android:icon="@drawable/ic_menu_preferences"
+        android:orderInCategory="200"
+        android:showAsAction="ifRoom|withText"
+        android:title="settings"/>
 
 </menu>
