--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -13,13 +13,18 @@
         android:stackFromBottom="true"
         android:transcriptMode="normal" />
 
-    <ProgressBar
+    <FrameLayout
         android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_above="@+id/etMessage"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:visibility="gone" >
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+    </FrameLayout>
 
     <TextView
         android:id="@+id/message_list_empty"
